app/assets/stylesheets/pages/_home.scss
*,
*::before,
*::after {
  // box-sizing: border-box;
  margin: 0;
  padding: 0;
  position: relative;
}

// :root {
//   font-size: 16px;
// }

// // body {
//   min-height: 100vh;
// }

// h1 {
//   &::after {
//     bottom: 0;
//     content: '';
//     display: block;
//     height: 0.25rem;
//     position: absolute;
//     width: 1rem;
//   }
// }

// .container {
//   margin: 0 auto 2rem;
//   max-width: 900px;
//   padding: 0 1.5rem;
// }

//.sample-item-1 {

//   height: 250px;
//   min-width: 350px;
//   width: 350px;
// }

// .sample-item-2 {

//   height: 250px;
//   min-width: 350px;
//   width: 350px;
// }

// .sample-item-3 {

//   height: 250px;
//   min-width: 350px;
//   width: 350px;
// }
// .sample-item-4 {

//   height: 250px;
//   min-width: 350px;
//   width: 350px;
// }
// .sample-item-5 {

//   height: 250px;
//   min-width: 350px;
//   width: 350px;
// }

// Plugin code below

.horizontal-scrolling-banner {
  overflow: hidden;
  top: 0;
}

.horizontal-scrolling-banner__helper-wrapper {
  align-items: center;
  display: flex;
  top: 0;
  left: 0;
  // transform: translateZ(0);
  // transition-property: left;
  // transition-timing-function: linear;
}

.home-about {
  margin: 0px;
  background-color: white;
}

.home-detail {
  text-align: center;
  background-color: white;
  height: 200px;
  margin: 10px;
  h3 {
    font-size: 26px;
    margin: 0px;
    padding: 20px 0px;
};
  i {
  font-size: 45px;
  color: #62A87C;
};
  p {
  font-size: 18px;
  margin: 30px;
};
}


.home-start-now {
  background-color: white;
  text-align: center;
}

